[package]
name = "u_fundraisers"
version = "1.1.0"
authors = ["u_fundraisers <vitaliksokil200@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
near-sdk = "4.0.0-pre.8"
near-contract-standards = "4.0.0-pre.8"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
